force-app/main/default/objects/ICV_Commitment_LE__c/ICV_Commitment_LE__c.object-meta.xml
<CustomObject>
    <label>ICV Commitment LE</label>
    <nameField>
        <displayFormat>LE-{00000000}</displayFormat>
        <label>ICV Commitment LE Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICV Commitment LEs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>