force-app/main/default/objects/ICV_Commitment_LE__c/fields/Commitment_Id__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Id__c</fullName>
    <label>Commitment Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>