force-app/main/default/objects/ICV_Commitment_LE__c/fields/Expected_Loss__c.field-meta.xml
<CustomField>
    <fullName>Expected_Loss__c</fullName>
    <label>Expected Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>