force-app/main/default/objects/ICV_Commitment_LE__c/fields/Source_Commitment_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Commitment_Type__c</fullName>
    <label>Source Commitment Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>