force-app/main/default/objects/ICV_Commitment_LE__c/fields/Source_System_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_System_Name__c</fullName>
    <label>Source System Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>